# TimeWave

./: LICENSE  Makefile  README.md
formal/: .gitignore  Makefile  onehot_mux.sby  onehot_mux_tb.sv  priority_arbiter.sby  priority_arbiter_tb.sv  uart_tx.sby  uart_tx_tb.sv  wb_arbiter.sby  wb_arbiter_tb.sv  wb_master_tb.sv  wb_slave_tb.sv
rom/: bootrom.mem  led.mem
rtl/: alu.sv  bus.sv  bus_decoder.sv  fifo.sv  led_interface.sv  multiplexer.sv  onehot_mux.sv  priority_arbiter.sv  priority_encoder.sv  pulse_generator.sv  pulse_latch.sv  ram.sv  rom.sv  system_bus.sv  uart_tx.sv  wb_arbiter.sv  wb_bus.sv  wb_bus32.sv  wb_multiplexer.sv  wb_uart_tx.sv  word_reducer.sv
rtl/cpu/: cpu.sv  cpu_control.sv  cpu_decode.sv  cpu_execute.sv  cpu_if.sv  cpu_regfile.sv
rtl/riscv/: riscv.sv  riscv_csr.sv  riscv_exu.sv  riscv_hazards.sv  riscv_idu.sv  riscv_ifu.sv  riscv_lsu.sv  riscv_regfile.sv  riscv_wbu.sv
rtl/sim/: fifo_top.sv  led_interface_top.sv  riscv_top.sv
sim/alu-test/: Cargo.toml  build.rs
sim/alu-test/src/: driver.cpp  driver.h  lib.rs
sim/fifo/: Cargo.toml  build.rs
sim/fifo/src/: lib.rs
sim/led_interface/: Cargo.toml  build.rs  led.mem  test.vcd
sim/led_interface/src/: lib.rs
sim/riscv/: Cargo.toml  bootrom.mem  build.rs  test.mem  trace.gtkw  trace.vcd
sim/verilator/: Cargo.toml  build.rs
tools/bootrom/: Cargo.toml  build.rs  link.ld  todo.md
tools/bootrom/src/: entry.s  main.rs
tools/memgen/: Cargo.toml
tools/timewave/: Cargo.toml
tools/timewave/src/: _cycles.s  _entry.s  console.rs  leds.rs  lib.rs  riscv.rs  uart.rs
(+5 files in other folders)
