[package]
name = "timewave"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# This disables tests for this library and fixes the rust-analyzer error.
[lib]
name = "timewave"
test = false
bench = false

[dependencies]
